syntax = "proto3";

option csharp_namespace = "ToDoGRPC";

package todoit;
 
service ToDoService {
  // Create a new ToDo
  rpc CreateToDo(CreateToDoRequest) returns (CreateToDoResponse) {}
  
  // Read single ToDo
  rpc ReadToDo(ReadToDoRequest) returns (ReadToDoResponse) {}
  
  // Read list of ToDos
  rpc ListToDo(GetAllRequests) returns (GetAllResponses) {}
  
  // Update ToDo
  rpc UpdateToDo(UpdateToDoRequest) returns (UpdateToDoResponse) {}
  
  // Delete ToDo
  rpc DeleteToDo(DeleteToDoRequest) returns (DeleteToDoResponse) {}
}
message CreateToDoRequest {
  string title = 1;
  string description = 2;
}
message CreateToDoResponse {
  int32 id = 1;
}
message ReadToDoRequest {
  int32 id = 1;
}
message ReadToDoResponse {
  int32 id = 1;
  string title = 2;
  string description = 3;
  string to_do_status = 4;
}

message GetAllRequests {}

message GetAllResponses {
  repeated ReadToDoResponse to_do = 1;
}

message UpdateToDoRequest {
  int32 id = 1;
  string title = 2;
  string description = 3;
  string to_do_status = 4;
}
message UpdateToDoResponse {
  int32 id = 1;
}
message DeleteToDoRequest {
  int32 id = 1;
}
message DeleteToDoResponse {
  int32 id = 1;
}